<resources>
  <string name="msg_you_are_offline">You are offline.</string>

  <!--login-->
  <string name="login_email">Email</string>
  <string name="login_password">Password</string>
  <string name="login_login">Login</string>
  <string name="login_error_invalid_email">Email is invalid.</string>
  <string name="login_error_invalid_password">Password must at least 6 characters.</string>
  <string name="login_error_wrong_password">Wrong password.</string>
  <string name="login_msg_successful">Successful</string>

  <!--Main-->
  <string name="main_open_extra_injection">Open Extra Injection</string>
  <string name="main_open_login">Open Login</string>
  <string name="main_open_product_listing">Open Product Listing</string>
  <string name="main_open_collection_view">Open Collection View</string>

  <!--Product Listing-->
  <string name="product_listing_try_again">Try again.</string>
  <string name="product_listing_error_occurred">Error occurred.</string>
  <string name="product_listing">Product Listing</string>

  <!--Product Detail-->
  <string name="product_detail_description">Description</string>
  <string name="product_detail_add_to_cart">Add to cart</string>
  <string name="cart">Cart</string>

  <!--CollectionView-->
  <string name="clv_error_occurred">Error occurred.</string>
  <string name="main_open_viewholders_demo">Open ViewHolders Demo</string>
</resources>
