<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

  <Button
      android:id="@+id/btOpenExtraInjection"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_open_extra_injection"
      />

  <Button
      android:id="@+id/btOpenLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_open_login"
      />

  <Button
      android:id="@+id/btOpenProductListing"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_open_product_listing"
      />

  <Button
      android:id="@+id/btOpenCollectionView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_open_collection_view"
      />

  <Button
      android:id="@+id/btOpenViewHoldersDemo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_open_viewholders_demo"
      />

  <Button
      android:id="@+id/btOpenReduxDemo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Redux Demo"
      />

  <Button
      android:id="@+id/btOpenDaggersDemo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Daggers Demo"
      />

</LinearLayout>
